home section it's done

--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
 
     <!-- Start landing -->
     <section class="home">
-      <div class="content">
+      
+      <div class="content container-sm">
         <h5>Welcome To World</h5>
         <h1>Visit <span class="countries"></span></h1>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae, nisi.</p>
