--- a/index.html
+++ b/index.html
@@ -10,13 +10,20 @@
     <link rel="stylesheet" href="assets/css/normalize.css" />
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="shortcut icon" href="./assets/images/travel-icon.png" type="image/x-icon">
+    <link
+      rel="shortcut icon"
+      href="./assets/images/travel-icon.png"
+      type="image/x-icon"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-      <!-- Google Fonts -->
-      <link rel="preconnect" href="https://fonts.googleapis.com">
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
-      <!-- Google Fonts -->
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Google Fonts -->
     <title>Travel</title>
   </head>
   <body>
@@ -24,7 +31,12 @@
     <nav class="navbar navbar-expand-lg" id="navbar">
       <div class="container">
         <a class="navbar-brand" href="index.html"><span>T</span>ravel</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#mynavbar"
+        >
           <span><i class="fa-solid fa-bars menu-icon"></i></span>
         </button>
         <div class="collapse navbar-collapse" id="mynavbar">
@@ -47,11 +59,16 @@
             <li class="nav-item">
               <a class="nav-link" href="#about">About</a>
             </li>
-           
           </ul>
-          <form class="d-flex mt-2 mt-md-0 " role="search">
-            <input class="form-control me-2" type="search" placeholder="Search">
-            <button class="btn btn-outline-success" type="button">Search</button>
+          <form class="d-flex mt-2 mt-md-0" role="search">
+            <input
+              class="form-control me-2"
+              type="search"
+              placeholder="Search"
+            />
+            <button class="btn btn-outline-success main-btn" type="button">
+              Search
+            </button>
           </form>
         </div>
       </div>
@@ -59,18 +76,46 @@
 
     <!-- End Navber -->
 
-
     <!-- Start landing -->
     <section class="home">
-      
       <div class="content container-sm">
         <h5>Welcome To World</h5>
         <h1>Visit <span class="countries"></span></h1>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae, nisi.</p>
-        <a href="">Book Place</a>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae, nisi.
+        </p>
+        <a class="btn main-btn" href="#book">Book Place</a>
       </div>
     </section>
     <!-- End landing -->
+
+    <!-- Start Book Section -->
+    <section class="book" id="book">
+      <div class="container">
+        <div class="main-text">
+          <h1><span>b</span>ook</h1>
+        </div>
+        <div class="row">
+          <div class="col-md-6 py-3 py-md-0">
+            <div class="card">
+              <img src="./assets/images/book-img.png" alt="" />
+            </div>
+          </div>
+
+          <div class="col-md-6 py-3 py-md-0">
+            <form action="#">
+              <input type="text" class="form-control" placeholder="Where To" ><br>
+              <input type="text" class="form-control" placeholder="How Many" ><br>
+              <input type="date" class="form-control" placeholder="Arrivals" ><br>
+              <input type="date" class="form-control" placeholder="Leaving" ><br>
+              <textarea class="form-control" rows="5" name="text" placeholder="Enter Your Name & Details"></textarea>
+              <input type="submit" value="Book Now" class="submit btn main-btn" >
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End Book Section -->
 
     <script src="/javascript/index.js"></script>
     <script src="/javascript/bootstrap.bundle.js"></script>
