--- a/index.html
+++ b/index.html
@@ -217,6 +217,8 @@
               </div>
             </div>
           </div>
+        </div>
+        <div class="row">
           <div class="col-md-4 py-3 py-md-0">
             <div class="card">
               <img src="assets/images/italy.png" alt="" />
@@ -285,6 +287,104 @@
       <!-- </div> -->
     </section>
     <!-- End Packages -->
+
+  <!-- Start Section Services  -->
+  <section class="services" id="services">
+
+    <div class="container">
+
+      <div class="main-text">
+        <h1><span>s</span>ervices</h1>
+      </div>
+
+      <div class="row">
+
+        <div class="col-md-4 py-3 py-md-0">
+
+          <div class="card">
+            <i class="fas fa-hotel text-center"></i>
+            <div class="card-body text-center">
+              <h3>Affordable Hotel</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, eaque.</p>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="col-md-4 py-3 py-md-0">
+
+          <div class="card">
+            <i class="fas fa-utensils text-center"></i>
+            <div class="card-body text-center">
+              <h3>Food & Drinks</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, eaque.</p>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="col-md-4 py-3 py-md-0">
+
+          <div class="card">
+            <i class="fas fa-bullhorn text-center"></i>
+            <div class="card-body text-center">
+              <h3>Safty Guide</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, eaque.</p>
+            </div>
+          </div>
+
+        </div>
+
+        
+
+      </div>
+      <div class="row">
+
+        <div class="col-md-4 py-3 py-md-0">
+
+          <div class="card">
+            <i class="fas fa-hiking text-center"></i>
+            <div class="card-body text-center">
+              <h3>Around The World</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, eaque.</p>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="col-md-4 py-3 py-md-0">
+
+          <div class="card">
+            <i class="fas fa-globe-asia text-center"></i>
+            <div class="card-body text-center">
+              <h3>Fastest Travel</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, eaque.</p>
+            </div>
+          </div>
+
+        </div>
+
+
+        <div class="col-md-4 py-3 py-md-0">
+
+          <div class="card">
+            <i class="fas fa-plane text-center"></i>
+            <div class="card-body text-center">
+              <h3>Adventures</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, eaque.</p>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+
+    </div>
+  </section>
+  <!-- End Section Services  -->
+
+
+
 
     <script src="/javascript/index.js"></script>
     <script src="/javascript/bootstrap.bundle.js"></script>
