--- a/index.html
+++ b/index.html
@@ -455,6 +455,40 @@
   <!-- End Gallary -->
 
 
+<!-- Start About  -->
+<section class="about" id="about">
+
+  <div class="container">
+
+    <div class="main-text">
+      <h1>about<span class="text-capitalize">Us</span></h1>
+    </div>
+
+    <div class="row">
+
+      <div class="col-md-6 py-3 py-md-0">
+        <div class="card rounded">
+          <img class="rounded" src="assets/images/about-img.png" alt="">
+        </div>
+      </div>
+
+
+      <div class="col-md-6 py-3 py-md-0 texts">
+        <h2>How Travel Agency Work</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident perferendis dolorem, numquam earum at nam beatae voluptate natus consectetur facere, saepe cupiditate ut exercitationem deserunt, facilis quam perspiciatis autem iure illo harum minima. Quas, vitae aperiam laudantium alias asperiores nulla rerum, nihil eveniet perferendis sint illum accusamus officiis aliquam nam.</p>
+        <button class="btn main-btn" id="about-btn">Read More...</button>
+      </div>
+
+      </div>
+
+    </div>
+
+  </div>
+</section>
+<!-- End About  -->
+
+
+
 
 
     <script src="/javascript/index.js"></script>
