footer  section it's done

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
   </head>
   <body>
     <!-- Start Navber -->
-    <nav class="navbar navbar-expand-lg" id="navbar">
+    <nav class="navbar navbar-expand-lg fixed-top" id="navbar">
       <div class="container">
-        <a class="navbar-brand text-capitalize" href="index.html"
+        <a class="navbar-brand text-capitalize" href="#home"
           ><span>t</span>ravel</a
         >
         <button
@@ -44,7 +44,7 @@
         <div class="collapse navbar-collapse" id="mynavbar">
           <ul class="navbar-nav me-auto text-capitalize">
             <li class="nav-item">
-              <a class="nav-link active" href="index.html">home</a>
+              <a class="nav-link active" href="#home">home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#book">book</a>
@@ -82,7 +82,7 @@
     <!-- End Navber -->
 
     <!-- Start landing -->
-    <section class="home">
+    <section class="home" id="home">
       <div class="content container-sm">
         <h5 class="text-capitalize">welcome to world</h5>
         <h1 class="text-capitalize">visit <span class="countries"></span></h1>
@@ -102,7 +102,7 @@
         </div>
         <div class="row">
           <div class="col-md-6 py-3 py-md-0">
-            <div class="card">
+            <div class="card border-0">
               <img src="./assets/images/book-img.png" alt="" />
             </div>
           </div>
@@ -488,6 +488,36 @@
 <!-- End About  -->
 
 
+<!-- Start Footer -->
+<footer id="footer" class="footer text-center">
+  <div class="container">
+    
+    <div class="main-text">
+      <h1><span class="text-capitalize">t</span>ravel</h1>
+    </div>
+
+
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus fugiat, ipsa quos nulla qui alias.</p>
+
+    <div class="social-links">
+      <i class="fa-brands fa-twitter"></i>
+      <i class="fa-brands fa-facebook"></i>
+      <i class="fa-brands fa-instagram"></i>
+      <i class="fa-brands fa-youtube"></i>
+      <i class="fa-brands fa-pinterest-p"></i>
+    </div>
+
+    <!-- <div class="credit">
+      <p>Designed By <a href="https://github.com/Ayhamalahmad">Ayham</a></p>
+    </div> -->
+    <div class="copyright">
+      <p>&copy;Copyright Ayham. All Rights Reserved</p>
+    </div>
+
+  </div>
+
+</footer>
+<!-- End Footer -->
 
 
 
