--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <div class="row">
           <div class="col-md-6 py-3 py-md-0">
             <div class="card border-0">
-              <img src="./assets/images/book-img.png" alt="" />
+              <img src="assets/images/book-img.png" alt="" />
             </div>
           </div>
 
@@ -521,8 +521,8 @@
 
 
 
-    <script src="/javascript/index.js"></script>
-    <script src="/javascript/bootstrap.bundle.js"></script>
-    <script src="/javascript/all.min.js"></script>
+    <script src="javascript/index.js"></script>
+    <script src="javascript/bootstrap.bundle.js"></script>
+    <script src="javascript/all.min.js"></script>
   </body>
 </html>
