Toggle theme dark/light

--- a/index.html
+++ b/index.html
@@ -61,6 +61,22 @@
             <li class="nav-item">
               <a class="nav-link" href="#about">about</a>
             </li>
+            <li>
+              <div class="dropdown">
+                <button
+                  class="btn btn-secondary dropdown-toggle"
+                  type="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                Toggle theme
+                </button>
+                <ul class="dropdown-menu">
+                  <li class="dropdown-item dark"><i class="fas fa-moon dark"></i>  Dark</li>
+                  <li class="dropdown-item light"> <i class="fas fa-sun light"></i> Light</li>
+                </ul>
+              </div>
+            </li>
           </ul>
           <form class="d-flex mt-2 mt-md-0" role="search">
             <input
@@ -74,6 +90,7 @@
             >
               search
             </button>
+              <!-- <i class="fas fa-adjust theam dark"></i> -->
           </form>
         </div>
       </div>
